<resources>
    <string name="app_name">ShoppingList</string>

    <string name="default_list_name">Shopping List #%d</string>
    <string name="preference_key_file">shopping_list_preferences</string>
    <string name="message_remove_list">List has been removed</string>
    <string name="undo_removal">Undo</string>
    <string name="hint_shopping_list_name">Shopping List Name</string>
    <string name="default_category_name">Uncategorized</string>
    <string name="copy_list_title">Copy Existing</string>
    <string name="new_list_title">New List</string>
    <string name="sort_list_title">Sort</string>
    <string name="sort_by_name">Alphabetically</string>
    <string name="sort_by_created_at">By creation date</string>
    <string name="view_group_by_categories">Group by categories</string>
    <string name="view_separate_items">Do not group</string>
    <string name="sort_created_by_me_first">Created by me first</string>
    <string name="sort_by_modified_at">By modified date</string>
    <string name="sort_assigned_to_me_first">Assigned to me first</string>
    <string name="delete_item">Delete</string>
    <string name="archive_item">Archive</string>
    <string name="sort_by_status">By status</string>
    <string name="view_list_title">View</string>
    <string name="menu_remove_bought">Remove bought</string>
    <string name="menu_remove_absent">Remove absent</string>
    <string name="menu_mark_all_as_bought">Mark all as bought</string>
    <string name="menu_mark_all_as_active">Mark all as active</string>
    <string name="edit_menu_item">Edit</string>
    <string name="remove_product_menu_item">Remove</string>
    <string name="mark_product_as_active_menu_item">Mark as active</string>
    <string name="mark_product_as_bought_menu_item">Mark as bought</string>
    <string name="mark_product_as_absent_menu_item">Mark as absent</string>
    <string name="edit_list_item">Edit</string>
    <string name="product_name_hint">Name</string>
    <string name="product_count_hint">Count</string>
    <string name="save_btn">Save</string>
    <string name="cancel_btn">Cancel</string>
    <string name="save_item_success_msg">Saved</string>
    <string name="create_product_from_template_title">Create from Template</string>
    <string name="new_product_title">New product</string>
    <string name="choose_template_activity_name">Choose Templates</string>
    <string name="shopping_lists_nav_item">Shopping</string>
    <string name="archive_nav_item">Archive</string>
    <string name="templates_nav_item">Product Templates</string>
    <string name="categories_nav_item">Categories</string>
    <string name="units_nav_item">Units</string>
    <string name="users_nav_item">Users</string>
    <string name="settings_nav_item">Settings</string>
    <string name="feedback_nav_item">Send Feedback</string>
    <string name="rate_app_nav_item">Rate App</string>
    <string name="templates_activity_label">Product Templates</string>
    <string name="remove_menu_item">Remove</string>
    <string name="new_entity_dialog_title">New</string>
    <string name="create_list_menu_item">Create new list</string>
    <string name="action_mode_selected_count">%1$s selected</string>
    <string name="categories_activity_label">Categories</string>
    <string name="units_activity_label">Units</string>
    <string name="archive_activity_label">Archive</string>
    <string name="name_is_empty_validation_message">Name is empty</string>
    <string name="product_unique_name_validation_message">Product with same name already exists within its list</string>
    <string name="template_unique_name_validation_message">Template with same name already exists</string>
    <string name="unit_unique_name_validation_message">Unit with same name already exists</string>
    <string name="category_unique_name_validation_message">Category with same name already exists</string>
    <string name="error_occurd_message">Something unexpected has happened</string>
    <string name="restore_menu_item">Restore</string>
    <string name="list_is_empty_title">You have no items here</string>
    <string name="save_and_next_button"><![CDATA[Save&New]]></string>

    <string-array name="sort_product_lists_values">
        <item name="sort_by_name">Alphabetically</item>
        <item name="sort_by_created_at">By creation date</item>
    </string-array>

    <string name="unit_kilogram">kg</string>
    <string name="unit_gram">g</string>
    <string name="unit_liter">liter</string>
    <string name="unit_item">item</string>

    <string name="category_confectionery">Confectionery</string>
    <string name="category_dairy">Dairy</string>
    <string name="category_bakery">Bakery</string>

    <string name="template_donut">Donut</string>
    <string name="template_milk">Milk</string>
    <string name="template_bread">Bread</string>
    <string name="template_chocolate">Chocolate</string>
    <string name="user_unique_name_validation_message">User with the same name alread exists</string>
    <string name="users_activity_label">Users</string>
    <string name="invite_btn">Invite</string>
    <string name="invite_user_subject">Invitation to Family Shopping List</string>
    <string name="invite_user_text">Please join me to share shopping lists.\nJust follow link %1$s.</string>
    <string name="async_success_result">Success</string>
    <string name="async_error_result">Error</string>
    <string name="menu_share">Share</string>
    <string name="lists_nav_item">Lists</string>
    <string name="name">Name</string>
    <string name="error_on_build_dynamic_link">Cannot share link</string>
    <string name="user_is_added_msg">User has been added to your contacts</string>
    <string name="library_nav_item">Library</string>
</resources>
