<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_edit_list"
        android:icon="@drawable/ic_edit_black_24dp"
        android:title="@string/edit_menu_item"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_item_apply_sort_by_status"
        android:icon="@drawable/ic_sort_black_24dp"
        android:title="@string/sort_by_status"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_item_apply_sort_by_name"
        android:icon="@drawable/ic_sort_by_alpha_black_24dp"
        android:title="@string/sort_by_name"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_item_sort_by_status"
        android:icon="@drawable/ic_sort_black_24dp"
        android:title="@string/sort_by_status" />
    <item
        android:id="@+id/menu_item_sort_by_name"
        android:icon="@drawable/ic_sort_by_alpha_black_24dp"
        android:title="@string/sort_by_name" />

    <item
        android:id="@+id/menu_item_view_by_categories"
        android:icon="@drawable/ic_view_black_24dp"
        android:title="@string/view_group_by_categories" />
    <item
        android:id="@+id/menu_item_view_separately"
        android:title="@string/view_separate_items" />

    <item
        android:id="@+id/menu_item_remove_bought"
        android:title="@string/menu_remove_bought" />
    <!--item
        android:id="@+id/menu_item_remove_absent"
        android:title="@string/menu_remove_absent"/>
    <item
        android:id="@+id/menu_item_remove_all"/-->
    <item
        android:id="@+id/menu_item_mark_all_as_bought"
        android:title="@string/menu_mark_all_as_bought" />
    <item
        android:id="@+id/menu_item_mark_all_as_active"
        android:title="@string/menu_mark_all_as_active" />
    <item
        android:id="@+id/menu_item_share"
        android:title="@string/menu_share" />
    <item
        android:id="@+id/menu_item_remove"
        android:title="@string/delete_item"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_archive"
        android:title="@string/archive_item"
        app:showAsAction="never" />
</menu>